ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3/input.ts.stderr
error[1173]: 'extends' clause must precede 'implements' clause
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3/input.ts:1:22
  |
1 | class C implements A extends B {
  |                      ^^^^^^^

